--- a/ConfluxMobile/Conflux.UI/Views/BlacklistPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/BlacklistPage.xaml
@@ -23,13 +23,20 @@
 
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
-            <TextBlock Text="MY APPLICATION" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Text="page title" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
+            <TextBlock Text="CONFLUX" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
+            <TextBlock Text="blacklist" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
         </StackPanel>
 
-        <!--TODO: Content should be placed within the following grid-->
-        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-
+        <Grid Grid.Row="1" Margin="19,9.5,19,0">
+            <RichTextBlock TextWrapping="Wrap"
+                       IsTextSelectionEnabled="False"
+                       FontSize="17" Opacity="0.5">
+                <Paragraph>
+                    Fake or spam-like events will be displayed here. They are always ignored when you search them.
+                </Paragraph>
+                <Paragraph/>
+                <Paragraph>Currently, you have no such events in this list.</Paragraph>
+            </RichTextBlock>
         </Grid>
     </Grid>
 </Page>
