--- a/ConfluxMobile/Conflux.UI/Views/SearchPreferencesPage.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/SearchPreferencesPage.xaml
@@ -25,11 +25,12 @@
             <TextBlock Text="SEARCH PREFERENCES" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
         </StackPanel>
 
-        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="0,-6.5, 0, 5">
+        <Grid Grid.Row="1" Margin="0,-6.5, 0, 5">
             <Pivot>
                 <PivotItem Header="location">
                     <StackPanel>
-                        <CheckBox>
+                        <CheckBox Checked="OnLastKnownLocationChecked"
+                                  Unchecked="OnLastKnownLocationUnchecked">
                             <TextBlock Text="Use my last known location for finding events"
                                            TextWrapping="Wrap"/>
                         </CheckBox>
@@ -42,7 +43,8 @@
                 <PivotItem Header="data">
                     <StackPanel>
                         <StackPanel>
-                            <ToggleSwitch Header="Save data transfer">
+                            <ToggleSwitch Header="Save data transfer"
+                                          Toggled="OnSaveDataTransferToggled">
                                 
                             </ToggleSwitch>
                             <TextBlock Opacity="0.5" FontSize="16"
